k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Deployment do frontend (SPA/NGINX, etc.)
  name: {FRONT_NAME}
  labels:
    app: {FRONT_NAME}
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: {FRONT_NAME}
  template:
    metadata:
      labels:
        app: {FRONT_NAME}
    spec:
      containers:
        - name: {FRONT_NAME}
          # Imagem Docker do frontend (ajuste usuario/repositorio)
          image: {GH_SECRET_DOCKERHUB_USER}/{DOCKERHUB_REPO_FRONT}:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
