k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  # Service do frontend
  name: {FRONT_NAME}
  labels:
    app: {FRONT_NAME}
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: {FRONT_NAME}
